<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/server_host"/>

    <EditText
        android:id="@+id/serverHost"
        android:layout_width="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_height="wrap_content"
        android:inputType=""
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/server_port"/>

    <EditText
        android:id="@+id/serverPort"
        android:layout_width="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_height="wrap_content"
        android:inputType=""
        android:autofillHints="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/user_name"/>

    <EditText
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/password"/>

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/first_name"/>

    <EditText
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/last_name"/>

    <EditText
        android:id="@+id/last"
        android:layout_width="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/email"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/gender"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <RadioGroup
            android:id="@+id/genders"
            android:layout_width="156dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="1" >

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/female" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="42dp">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>
