<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent"
    android:parentActivityName="com.example.familymapclient.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/first_name_"/>

    <TextView
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_height="wrap_content"
        android:inputType="" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/last_name_"/>

    <TextView
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_height="wrap_content"
        android:inputType="" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text = "@string/gender_"/>

    <TextView
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_marginBottom="3dp"
        android:layout_height="wrap_content" />

    <ExpandableListView
        android:id="@+id/lvExp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"/>

</LinearLayout>